if(COMMAND cmake_policy)
    # Allow VERSION in the project() statement.
    cmake_policy(SET CMP0048 NEW)
endif()

set(GTE_VERSION_MAJOR 6)
set(GTE_VERSION_MINOR 8)

project(Geometrics VERSION ${GTE_VERSION_MAJOR}.${GTE_VERSION_MINOR})

cmake_minimum_required(VERSION 3.8)
add_subdirectory(CLODPolyline)
add_subdirectory(ConformalMapping)
add_subdirectory(ConstrainedDelaunay2D)
add_subdirectory(ConvexHull2D)
add_subdirectory(ConvexHull3D)
add_subdirectory(Delaunay2D)
add_subdirectory(Delaunay3D)
add_subdirectory(DisjointIntervalsRectangles)
add_subdirectory(ExtremalQuery)
add_subdirectory(GenerateMeshUVs)
add_subdirectory(IncrementalDelaunay2)
add_subdirectory(MinimalCycleBasis)
add_subdirectory(MinimumAreaBox2D)
add_subdirectory(MinimumAreaCircle2D)
add_subdirectory(MinimumVolumeBox3D)
add_subdirectory(MinimumVolumeSphere3D)
add_subdirectory(PolygonBooleanOperations)
add_subdirectory(PolylineOffset)
add_subdirectory(SplitMeshByPlane)
add_subdirectory(TriangulationCDT)
add_subdirectory(TriangulationEC)
add_subdirectory(VertexCollapseMesh)
