if(COMMAND cmake_policy)
    # Allow VERSION in the project() statement.
    cmake_policy(SET CMP0048 NEW)
endif()

set(GTE_VERSION_MAJOR 6)
set(GTE_VERSION_MINOR 8)

project(Graphics VERSION ${GTE_VERSION_MAJOR}.${GTE_VERSION_MINOR})

cmake_minimum_required(VERSION 3.8)
add_subdirectory(AppendConsumeBuffers)
add_subdirectory(AreaLights)
add_subdirectory(BlendedTerrain)
add_subdirectory(BufferUpdating)
add_subdirectory(BumpMaps)
add_subdirectory(CubeMaps)
add_subdirectory(GeometryShaders)
add_subdirectory(GlossMaps)
add_subdirectory(IEEEFloatingPoint)
add_subdirectory(Lights)
add_subdirectory(LightTexture)
add_subdirectory(MultipleRenderTargets)
add_subdirectory(PlanarReflections)
add_subdirectory(PlanarShadows)
add_subdirectory(PlaneMeshIntersection)
add_subdirectory(ProjectedTextures)
add_subdirectory(ShaderReflection)
add_subdirectory(ShadowMaps)
add_subdirectory(Skinning)
add_subdirectory(SphereMaps)
add_subdirectory(StructuredBuffers)
add_subdirectory(TextureArrays)
add_subdirectory(TextureUpdating)
add_subdirectory(Texturing)
add_subdirectory(VertexColoring)
add_subdirectory(VertexTextures)
add_subdirectory(VolumeFog)
add_subdirectory(WireMesh)
