if(COMMAND cmake_policy)
    # Allow VERSION in the project() statement.
    cmake_policy(SET CMP0048 NEW)
endif()

set(GTE_VERSION_MAJOR 5)
set(GTE_VERSION_MINOR 12)

project(Intersection VERSION ${GTE_VERSION_MAJOR}.${GTE_VERSION_MINOR})

cmake_minimum_required(VERSION 3.8)
add_subdirectory(AllPairsTriangles)
add_subdirectory(IntersectBoxCone)
add_subdirectory(IntersectBoxCylinder)
add_subdirectory(IntersectBoxSphere)
add_subdirectory(IntersectConvexPolyhedra)
add_subdirectory(IntersectInfiniteCylinders)
add_subdirectory(IntersectPlaneConvexPolyhedron)
add_subdirectory(IntersectSphereCone)
add_subdirectory(IntersectTriangleBox)
add_subdirectory(IntersectTriangleCylinder)
add_subdirectory(IntersectTriangles2D)
add_subdirectory(MovingCircleRectangle)
add_subdirectory(MovingSphereBox)
add_subdirectory(MovingSphereTriangle)
