if(COMMAND cmake_policy)
    # Allow VERSION in the project() statement.
    cmake_policy(SET CMP0048 NEW)
endif()

set(GTE_VERSION_MAJOR 5)
set(GTE_VERSION_MINOR 12)

project(Physics VERSION ${GTE_VERSION_MAJOR}.${GTE_VERSION_MINOR})

cmake_minimum_required(VERSION 3.8)
add_subdirectory(BallHill)
add_subdirectory(BallRubberBand)
add_subdirectory(BeadSlide)
add_subdirectory(BlownGlass)
add_subdirectory(BouncingBall)
add_subdirectory(Cloth)
add_subdirectory(DoublePendulum)
add_subdirectory(FlowingSkirt)
add_subdirectory(Fluids2D)
add_subdirectory(Fluids3D)
add_subdirectory(FoucaultPendulum)
add_subdirectory(FreeFormDeformation)
add_subdirectory(FreeTopFixedTip)
add_subdirectory(GelatinBlob)
add_subdirectory(GelatinCube)
add_subdirectory(HelixTubeSurface)
add_subdirectory(IntersectingBoxes)
add_subdirectory(IntersectingRectangles)
add_subdirectory(KeplerPolarForm)
add_subdirectory(MassPulleySpringSystem)
add_subdirectory(MassSprings3D)
add_subdirectory(Rope)
add_subdirectory(SimplePendulum)
add_subdirectory(SimplePendulumFriction)
